_sass/_mailchimp.scss
/* Copyright (c) 2015 Bitcamp */

/* Dumping styles for mailchimp here. */
.mc_input {
  color: #000000;
  padding-left: 10px;
  height: 30px;
  border: none;
  font-family: 'avenir';
  font-style: italic;
  padding-top: 16px;
  padding-bottom: 16px;
}

.mc_button {
  margin-left: 5px;
  background-color: #FF6F3F;
  border: none;
}

.mc_button_inside {
  border: none;
  background: transparent;
  text-transform: uppercase;
  font-weight: 700;
  font-size: 18px;
  padding-top: 3px;
  padding-bottom: 4px;
}

.hidden {
  display: none;
}

#mc_embed_signup {
  margin-left: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-top: 25px;
}

@media screen and (max-width: 720px) {
  .mc_button {
    padding-top: 3px;
    padding-bottom: 7px;
    margin-top: 3px;
  }

  .mc_input {
    padding: 18px;
  }
}

